<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Iván José Martín García
  ~ Copyright © 2016 makers. All rights reserved.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.makersupv.makers.Activities.CreateProjectActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_name"/>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/imagesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/images"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerUploadImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <TextView
            android:id="@+id/selectSkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skills"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/skillsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_margin="16dp"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/mainLayout"
        app:layout_anchorGravity="bottom|right|end"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        android:src="@drawable/ic_add_white"/>

</android.support.design.widget.CoordinatorLayout>