<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity"
    android:background="#242424">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MARKERS LOGO"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#ffffff"
                android:textSize="23dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etUsername"
                android:background="#ffffff"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:autoText="false"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#ffffff"
                android:textSize="23dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:background="#ffffff"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:autoText="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/login"
                android:id="@+id/btLogin"
                android:layout_gravity="right"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="www.makersupv.com"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:autoLink="web"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
